--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <section id="Hero">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, officia illum? Molestiae deserunt recusandae omnis. Molestias, error. Quia exercitationem sint ratione a, adipisci ipsum voluptatibus provident ipsam veniam dolores rem?</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, officia illum? Molestiae deserunt recusandae omnis. Molestias, error. Quia exercitationem sint ratione a, adipisci ipsum voluptatibus provident ipsam veniam dolores rem?</p>
     </section>
 </body>
 </html>
